--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
         </tr>
         <tr>
             <td width="162" valign="bottom"><font face="Georgia">Email</font></td>
-            <td valign="bottom" width="655"><font face="Georgia"><a href="mailto:gefang0616@sina.cn">
-                gefang0616@sina.cn</a> or <a href="mailto:gfang0616@njust.edu.cn">
-                gfang0616@njust.edu.cn</a> </font></td>
+            <td valign="bottom" width="655"><font face="Georgia"><a href="mailto:gfang0616@njupt.edu.cn">
+                gfang0616@njupt.edu.cn</a></font></td>
         </tr>
         <tr>
             <td width="162" valign="bottom"><font face="Georgia">OCRID</font></td>
@@ -100,6 +99,37 @@
             <td width="1178" valign="baseline" colspan="3">
                 <ul>
                 <li>
+
+                        <p style="line-height: 20px; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2">Ming Zhang, Chao Gong, <b>Fang Ge</b>, Dongjun Yu<sup>#</sup>.
+                                <u>FCMSTrans: Accurate Prediction of Disease-Associated nsSNPs by Utilizing Multiscale Convolution and Deep Feature Combination within a Transformer Framework</u> [J].    <b>Journal of Chemical Information and Modeling</b>, 2024,64(6):1394–1406.
+                                [Download Citation with <a href="./papers/mrmbert***.enw" target=_blank>Endnote</a> or <a
+                                        href="./papers/fcmstrans-***.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1021/acs.jcim.3c02025" target=_blank>DOI</a>:10.1021/acs.jcim.3c02025]
+                                [<a href="https://github.com/gc212/FCMSTrans" target=_blank>Github Link</a>]
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                            </font></li>
+                        <li>
+                        <p style="line-height: 20px; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2">Zihao Yan, <b>Fang Ge</b>,Yumeng Zhang, Fuyi Li, Jiangning Song<sup>#</sup>, and Dongjun Yu<sup>#</sup>.
+                                <u>TransEFVP: A Two-Stage Approach for the Prediction of Human Pathogenic Variants Based on Protein Sequence Embedding Fusio</u> [J]. <b>Journal of Chemical Information and Modeling</b>, 2024,64(6):1407–1418.
+                                [Download Citation with <a href="./papers/transefvp***.enw" target=_blank>Endnote</a> or <a
+                                        href="./papers/transefvp-***.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1021/acs.jcim.3c02019" target=_blank>DOI</a>:10.1021/acs.jcim.3c02019]
+                                [<a href="https://github.com/yzh9607/TransEFVP/tree/master" target=_blank>Github Link</a>]
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                            </font></li>
+                        <li>
+                        <p style="line-height: 20px; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2">Muhammad Arif，<b>Fang Ge</b>, Huma Fida, Saleh Musleh, Dongjun Yu, Tanvir Alam<sup>#</sup>.
+                                <u>iMRSAPred: Improved Prediction of Anti-MRSA Peptides Using Physicochemical and Pairwise Contact-Energy Properties of Amino Acids</u> [J]. <b>ACS Omega</b>, 2024,9(2):2874–2883.
+                                [Download Citation with <a href="./papers/iMRSAPred-ACS-omega.enw" target=_blank>Endnote</a> or <a
+                                        href="./papers/iMRSAPred-ACS-omega.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1021/acsomega.3c08303" target=_blank>DOI</a>:10.1021/acsomega.3c08303]
+                                [<a href="https://github.com/Muhammad-Arif-NUST/iMRSAPred" target=_blank>Github Link</a>]
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                            </font></li>
+                        <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2"><b>Fang Ge</b>, Muhammad Arif, Zihao Yan, Apilak Worachartcheewan, Hanin Alahmadi, Dongjun Yu<sup>#</sup>, and Watshara Shoombuatong<sup>#</sup>.
                                 <u>MMPatho: Interpretable Model with Multilevel Consensus and Evolutionary Information for Missense Mutation Pathogenic Prediction and Annotationl</u> [J]. 
@@ -108,7 +138,7 @@
                                         href="./papers/mrmbert-***.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1021/acs.jcim.3c00950" target=_blank>DOI</a>:10.1021/acs.jcim.3c00950]
                                 [<a href="http://202.119.84.36:3079/mmpatho/" target=_blank>Web Server</a>]
-                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)
                             </font></li>
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -119,7 +149,7 @@
                                         href="./papers/mrmbert-zhangying-TCBB-2023.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1109/TCBB.2023.3283985" target=_blank>DOI</a>:10.1109/TCBB.2023.3283985]
                                 [<a href="http://csbio.njust.edu.cn/bioinf/mrmbert/" target=_blank>Web Server</a>]
-                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)
                             </font></li>
                         <li>
 <!--                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -142,7 +172,7 @@
                                         href="./papers/VPatho-BIB-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1093/bib/bbad019" target=_blank>DOI</a>:10.1093/bib/bbad019]
                                 [<a href="http://csbio.njust.edu.cn/bioinf/vpatho/" target=_blank>Web Server</a>]
-                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: 000911247800001)<img src="news.gif"/>
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: 000911247800001)
                             </font></li>
 		                <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -153,7 +183,7 @@
                                         href="./papers/FFMSRes-Net-BIB-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1093/bib/bbab530" target=_blank>DOI</a>:10.1093/bib/bbab530]
                                 [<a href="http://csbio.njust.edu.cn/bioinf/ffmsresmutp/" target=_blank>Web Server</a>]
-                                (<a herf="https://www.researchgate.net/profile/Jiangning-Song/publication/356253985_Prediction_of_disease-associated_nsSNPs_by_integrating_multi-scale_ResNet_models_with_deep_feature_fusion/links/61f27a5c9a753545e2fe68f4/Prediction-of-disease-associated-nsSNPs-by-integrating-multi-scale-ResNet-models-with-deep-feature-fusion.pdf" target=_blank>WOS</a>: 000763000800043)<img src="news.gif"/>
+                                (<a herf="https://www.researchgate.net/profile/Jiangning-Song/publication/356253985_Prediction_of_disease-associated_nsSNPs_by_integrating_multi-scale_ResNet_models_with_deep_feature_fusion/links/61f27a5c9a753545e2fe68f4/Prediction-of-disease-associated-nsSNPs-by-integrating-multi-scale-ResNet-models-with-deep-feature-fusion.pdf" target=_blank>WOS</a>: 000763000800043)
                             </font></li>
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -164,7 +194,7 @@
                                         href="./papers/MutTMPredictor-CSBJ-2021.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1016/j.csbj.2021.11.024" target=_blank>DOI</a>:10.1016/j.csbj.2021.11.024]
                                 [<a href="http://csbio.njust.edu.cn/bioinf/muttmpredictor/" target=_blank>Web Server</a>]
-                                (<a herf="https://www.sciencedirect.com/science/article/pii/S200103702100489X" target=_blank>WOS</a>: 000731411300003)<img src="news.gif"/>
+                                (<a herf="https://www.sciencedirect.com/science/article/pii/S200103702100489X" target=_blank>WOS</a>: 000731411300003)
                             </font></li>
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -206,7 +236,7 @@
                                 [<a href="https://doi.org/10.1021/acs.jcim.2c00799" target=_blank>DOI</a>:10.1021/acs.jcim.2c00799]
                                 [<a href="https://prost.erc.monash.edu/seq" target=_blank>Web Server:https://prost.erc.monash.edu/seq</a>]
                                 [<a href="https://github.com/ShahidIqb/PROST" target=_blank>Github code link</a>]
-                                (PMID: 35973091)<img src="news.gif"/>
+                                (PMID: 35973091)
                             </font></li>
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -216,7 +246,7 @@
                                         href="./papers/Zhu-yiheng-BIB-2021.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1093/bib/bbaa076" target=_blank>DOI</a>:10.1093/bib/bbaa076]
                                 [<a href="http://csbio.njust.edu.cn/bioinf/dcfcrystal/" target=_blank>Web Server</a>]
-                                (WOS: 000709461300028)<img src="news.gif"/>
+                                (WOS: 000709461300028)
                             </font></li>
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -226,7 +256,7 @@
                                         href="./papers/Zhang-meng-BIB-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1093/bib/bbac392" target=_blank>DOI</a>:10.1093/bib/bbac392]
                                 [<a href="http://202.119.84.36:3079/csorffinder/" target=_blank>Web Server</a>]
-                                (WOS: XXXXX)<img src="news.gif"/>
+                                (WOS: XXXXX)
                             </font></li>
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -246,7 +276,7 @@
                                         href="./papers/Arif-StackACPred-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1016/j.chemolab.2021.104458" target=_blank>DOI</a>:10.1016/j.chemolab.2021.104458]
                                 <!-- [<a href="http://csbio.njust.edu.cn/bioinf/sscpred/" target=_blank>Web Server</a>] -->
-                                (WOS: 000796888500002)<img src="news.gif"/>
+                                (WOS: 000796888500002)
                             </font></li>   
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
