--- a/servers.html
+++ b/servers.html
@@ -35,80 +35,7 @@
                 <hr/>
             </td>
         </tr>
-        <!-- xxxx -->
-        <tr>
-            <td width="880">
-                <table width="880" border="0">
-                    <tbody>
-                    <tr>
-
-
-
-                        <td>
-                            <img width="137" height="157"
-                                 style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/stoploga.png" border="0" vspace="0" hspace="0"/>
-                        </td>
-                        <td width="285" align="center">
-                            <p style="text-align:left;">
-                                                    <span style="font-family:georgia;font-size:12px;">
-                                                        <span style="color:#0000ff;">
-                                                            <a style="color:#0000ff;" href="http://202.119.84.36:3079/mmpatho/" target="_blank"><strong>Stoploga</strong></a>
-                                                        </span>
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Category</strong>: </span>[Genome-wide variants]
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Description</span></strong>:  Stop lost and stop gained variation.
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Journal</strong></span>: <strong>Sumbitted</strong>
-                                                        <br/>
-                                                        <span style="color:#0000ff;">
-                                                            <strong>
-                                                                <a href="https://doi.org/10.1093/bioinformatics/babbXXX" target=_blank>DOI:</a>
-                                                            </strong>
-                                                        </span>&nbsp;10.1093/bioinformatics/babbXXX
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Year</strong></span>: <strong>2023</strong>
-                                                    </span>
-                            </p>
-                        </td>
-
-                        <td>
-                            <img width="137" height="157"
-                                 style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/MMPatho.png" border="0" vspace="0" hspace="0"/>
-                        </td>
-                        <td width="285" align="center">
-                            <p style="text-align:left;">
-                                                    <span style="font-family:georgia;font-size:12px;">
-                                                        <span style="color:#0000ff;">
-                                                            <a style="color:#0000ff;" href="http://202.119.84.36:3079/mmpatho/" target="_blank"><strong>MMPatho</strong></a>
-                                                        </span>
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Category</strong>: </span>[Genome-wide variants]
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Description</span></strong>: Prediction of pathogenicity and function impact of missense mutation.
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Journal</strong></span>: <strong>Online</strong>
-                                                        <br/>
-                                                        <span style="color:#0000ff;">
-                                                            <strong>
-                                                                <a href="https://doi.org/10.1021/acs.jcim.3c00950" target=_blank>DOI:</a>
-                                                            </strong>
-                                                        </span>&nbsp;10.1021/acs.jcim.3c00950
-                                                        <br/>
-                                                        <span style="color:#0000ff;"><strong>Year</strong></span>: <strong>2023</strong>
-                                                    </span>
-                            </p>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-
-
-
+        <!------- 1 ------------>
         <tr>
             <td width="880">
                 <table width="880" border="0">
@@ -118,7 +45,8 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/VPatho.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/VPatho.jpg" border="0" vspace="0" hspace="0"/>
+
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -147,7 +75,78 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/FFMSRes-MutP.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/MMPatho.jpg" border="0" vspace="0" hspace="0"/>
+                        </td>
+                        <td width="285" align="center">
+                            <p style="text-align:left;">
+                                                    <span style="font-family:georgia;font-size:12px;">
+                                                        <span style="color:#0000ff;">
+                                                            <a style="color:#0000ff;" href="http://202.119.84.36:3079/mmpatho/" target="_blank"><strong>MMPatho</strong></a>
+                                                        </span>
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Category</strong>: </span>[Genome-wide variants]
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Description</span></strong>: Prediction of pathogenicity and function impact of missense mutation.
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Journal</strong></span>: <strong>Journal of Chemical Information and Modeling</trong>
+                                                        <br/>
+                                                        <span style="color:#0000ff;">
+                                                            <strong>
+                                                                <a href="https://doi.org/10.1021/acs.jcim.3c00950" target=_blank>DOI:</a>
+                                                            </strong>
+                                                        </span>&nbsp;10.1021/acs.jcim.3c00950
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Year</strong></span>: <strong>2023</strong>
+                                                    </span>
+                            </p>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+
+
+        <!------- 2 ------------>
+        <tr>
+            <td width="880">
+                <table width="880" border="0">
+                    <tbody>   
+                    <tr>
+                        <td>
+                            <img width="137" height="157"
+                                 style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
+                                 src="./images/stoploga.jpg" border="0" vspace="0" hspace="0"/>
+                        </td>
+                        <td width="285" align="center">
+                            <p style="text-align:left;">
+                                                    <span style="font-family:georgia;font-size:12px;">
+                                                        <span style="color:#0000ff;">
+                                                            <a style="color:#0000ff;" href="http://202.119.84.36:3079/mmpatho/" target="_blank"><strong>Stoploga</strong></a>
+                                                        </span>
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Category</strong>: </span>[Genome-wide variants]
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Description</span></strong>:  Stop lost and stop gained variation.
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Journal</strong></span>: <strong>Sumbitted</strong>
+                                                        <br/>
+                                                        <span style="color:#0000ff;">
+                                                            <strong>
+                                                                <a href="https://doi.org/10.1093/bioinformatics/babbXXX" target=_blank>DOI:</a>
+                                                            </strong>
+                                                        </span>&nbsp;10.1093/bioinformatics/babbXXX
+                                                        <br/>
+                                                        <span style="color:#0000ff;"><strong>Year</strong></span>: <strong>2023</strong>
+                                                    </span>
+                            </p>
+                        </td>
+
+
+                        <td>
+                            <img width="137" height="157"
+                                 style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
+                                 src="./images/FFMSRes-MutP.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -181,7 +180,7 @@
 
 
 
-        <!-- xxxx -->
+        <!------- 3 ------------>
         <tr>
             <td width="880">
                 <table width="880" border="0">
@@ -190,7 +189,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/MutTMpredictor.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/MutTMpredictor.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -219,7 +218,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/csORF-finder.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/csORF-finder.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -250,9 +249,10 @@
                 </table>
             </td>
         </tr>
-        <!-- xxxx -->
 
 
+
+        <!------- 4 ------------>
         <tr>
             <td width="880">
                 <table width="880" border="0">
@@ -261,7 +261,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/PROST.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/PROST.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -291,7 +291,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/SSCpred.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/SSCpred.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -322,9 +322,9 @@
                 </table>
             </td>
         </tr>
-        <!-- xxxx -->
 
 
+        <!------- 5 ------------>
         <tr>
             <td width="880">
                 <table width="880" border="0">
@@ -333,7 +333,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/DCFCrystal.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/DCFCrystal.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -362,7 +362,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/mrmbert_2.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/mrmbert.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -393,9 +393,9 @@
                 </table>
             </td>
         </tr>
-        <!-- xxxx -->
 
 
+        <!------- 6 ------------>
         <tr>
             <td width="880">
                 <table width="880" border="0">
@@ -404,7 +404,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/DeepnsSNPs.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/DeepnsSNPs.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -431,7 +431,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/TargetMM.png" border="0" vspace="0" hspace="0"/>
+                                 src="./images/TargetMM.jpg" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
