--- a/servers.html
+++ b/servers.html
@@ -45,7 +45,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/VPatho.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/VPatho.png" border="0" vspace="0" hspace="0"/>
 
                         </td>
                         <td width="285" align="center">
@@ -75,7 +75,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/MMPatho.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/MMPatho.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -116,7 +116,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/stoploga.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/stoploga.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -146,7 +146,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/FFMSRes-MutP.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/FFMSRes-MutP.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -189,7 +189,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/MutTMpredictor.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/MutTMpredictor.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -218,7 +218,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/csORF-finder.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/csORF-finder.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -261,7 +261,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/PROST.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/PROST.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -291,7 +291,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/SSCpred.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/SSCpred.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -333,7 +333,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/DCFCrystal.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/DCFCrystal.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -362,7 +362,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/mrmbert.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/mrmbert.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
@@ -404,7 +404,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/DeepnsSNPs.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/DeepnsSNPs.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" align="center">
                             <p style="text-align:left;">
@@ -431,7 +431,7 @@
                         <td>
                             <img width="137" height="157"
                                  style="border:1px solid #0000ff;border-image:none;width:137px;height:157px;padding-top:1px;padding-bottom:1px;"
-                                 src="./images/TargetMM.jpg" border="0" vspace="0" hspace="0"/>
+                                 src="./images/TargetMM.png" border="0" vspace="0" hspace="0"/>
                         </td>
                         <td width="285" style="text-align:left;">
                             <p style="text-align:left;">
