--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                 https://www.researchgate.net/profile/Ge-Fang-3</a> </font></td>
         </tr>
         <tr>
+            <td width="162" valign="bottom"><font face="Georgia">Teaching</font></td>
+            <td valign="bottom" width="655"><font face="Georgia"><a href="./teaching.html"
+                                                                    target=_blank>
+                Python Loop Control Learning System</a> </font></td>
+        </tr>
+        <tr>
             <td width="143">
             </td>
             <td width="517">
